[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/menu.png" type="Texture" id=1]
[ext_resource path="res://main_menu/AboutScene2.gd" type="Script" id=2]
[ext_resource path="res://font/SUPER BOOM.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.878431 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[node name="AboutScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 556.203
margin_top = 79.2061
margin_right = 659.203
margin_bottom = 99.2061
text = "Ke Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.0
margin_top = -101.5
margin_right = 267.0
margin_bottom = 203.5
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -131.5
margin_right = 49.5
margin_bottom = -114.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ABOUT LELEKU"

[node name="Label2" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.111
margin_top = -98.4607
margin_right = 252.889
margin_bottom = 138.539
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ikan lele adalah ikan yang hidup di perairan umum dan merupakan ikan yang bernilai ekonomis, serta disukai oleh masyarakat.
ikan lele memiliki berbagai kelebihan diantaranya adalah pertumbuhan yg cepat, memiliki kemampuan beradaptasi terhadap lingkungan yang tinggi, rasanya enak dan kandungan gizinya cukp tinggi.
pertumbuhan lele dibedakan menjadi 2 kolam yaitu pendederan dan pembesaran.
pendederan adalah suatu tahapan untuk melepas benih ke tempat pembesaran. benih ikan didederkan hingga siap untuk ditebar di kolam bududaya yag lebih luas. benih lele sudah bisa dipindahakan ke kolam pendederan setelah berumur 3 minggu sejak menetas di tempat pemijahan, atau kira kira berukuarn panjang 1 -2 cm. ketika benih  masih berukuran 1-2 cm, gunakan tepuing peleet yang meilki kadar protein lebih dari 40%, karena pada umur tersebut lel membuthukan banyak protein unkt perkembangan."
align = 1
valign = 1
autowrap = true

[node name="prev" type="Button" parent="Panel"]
margin_left = 183.0
margin_top = 276.0
margin_right = 220.0
margin_bottom = 296.0

[node name="next3" type="Button" parent="Panel"]
margin_left = 305.0
margin_top = 272.0
margin_right = 355.0
margin_bottom = 292.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Panel/next3" to="." method="_on_next3_pressed"]
